DBクラウド化、Postgres化

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ELBOOK
-spring.datasource.url=jdbc:mysql://localhost:3306/elbook
-spring.datasource.username=test
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://dpg-d191d515pdvs73drb0c0-a.oregon-postgres.render.com:5432/elbook?currentSchema=elbook
+spring.datasource.username=elbook_user
+spring.datasource.password=Er7caTedt6moXOP8Mhb9Kd3tcMYo9g8v
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.enabled=true
